ユーザー個別ページのデザイン修正

--- a/app/assets/stylesheets/blocks/user/_sns-links.sass
+++ b/app/assets/stylesheets/blocks/user/_sns-links.sass
@@ -1,7 +1,7 @@
 .sns-links__item-link
   font-size: .875rem
   &:hover
-    color: $accent-color
+    color: $main-color
   &.is-disabled
     background-color: rgba(black, .1)
     color: rgba(black, .3)
