タイポ修正

--- a/app/views/products/_product.html.slim
+++ b/app/views/products/_product.html.slim
@@ -2,7 +2,7 @@
   .thread__inner.a-card
     header.thread-header
       h1.thread-header__title
-        | #{link_to product.practice.title, product.practice, class: "thread-header__title-link"}の:提出物
+        | #{link_to product.practice.title, product.practice, class: "thread-header__title-link"}の提出物
       .thread-meta
         .thread-meta__author-name
           = link_to product.user, class: "thread-meta__author-name-link" do
