--- a/app/views/application/_faces.html.slim
+++ b/app/views/application/_faces.html.slim
@@ -1,4 +1,5 @@
 .faces
   .faces__inner
-    canvas#canvas(style="display:none")
-    #js-faces
+    .faces__canvas-container
+      canvas#canvas(style="display:none")
+      #js-faces.ofsr
