--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -18,3 +18,5 @@ header.page-header
               .thread-list__footer-to-index
                 = link_to announcements_path, class: "thread-list__footer-text-link" do
                   | 全てのお知らせ
+
+      = render "users/grass", user: current_user
