--- a/app/views/products/show.html.slim
+++ b/app/views/products/show.html.slim
@@ -1,4 +1,5 @@
 - title "提出物"
+
 header.page-header
   .container
     .page-header__container
@@ -6,6 +7,62 @@ header.page-header
 
 .page-body
   .container
-    = render "product", product: @product
+    .thread
+      .thread__inner.a-card
+        header.thread-header
+          h1.thread-header__title
+            | #{link_to @product.practice.title, @product.practice, class: "thread-header__title-link"}の提出物
+          .thread-meta
+            .thread-meta__author-name
+              = link_to @product.user, class: "thread-meta__author-name-link" do
+                = @product.user.login_name
+            time.thread-meta__created-at(datetime="#{@product.created_at.to_datetime}" pubdate="pubdate")
+              = l @product.created_at
+            .thread-meta__label
+              | 最終更新
+            time.thread-meta__updated-at(datetime="#{@product.updated_at.to_datetime}" pubdate="pubdate")
+              = l @product.updated_at
+        - if @product.checks.any?
+          .stamp.stamp-approve
+            h2.stamp__content.is-title
+              | 確認済
+            time.stamp__content.is-created-at
+              = l @product.checks.last.created_at.to_date, format: :short
+            .stamp__content.is-user-name
+              = @product.checks.last.user.login_name
+        .thread__description.js-target-blank.is-long-text-style.js-markdown-view
+          =  @product.practice.goal
+        .thread__description.js-target-blank.is-long-text-style.js-markdown-view
+          =  @product.body
+        - if @product.user == current_user
+          .card-footer
+            .card-footer-actions
+              ul.card-footer-actions__items
+                li.card-footer-actions__item
+                  = link_to edit_product_path(@product), class: "card-footer-actions_action is-button-simple-md-primary is-block" do
+                    i.fas.fa-pen
+                    | 内容修正
+                li.card-footer-actions__item
+                  = link_to @product, data: { confirm: "本当によろしいですか？" }, method: :delete, class: "card-footer-actions__action is-button-simple-md-danger is-block" do
+                    i.fas.fa-trash-alt
+                    | 削除
+
+        - if (admin_login? || adviser_login?) && @product.checks.blank?
+          .thread-admin-tools
+            ul.thread-admin-tools__items
+              li.thread-admin-tools__item
+                = form_for @product.checks.new, class: "thread-check-form" do |f|
+                  = hidden_field_tag :user_id, current_user.id
+                  = hidden_field_tag :product_id, @product.id
+                  = f.submit "提出物を確認", class: "thread-check-form__action is-button-simple-md-danger"
+
+      .thread-prev-next
+        .thread-prev-next__item
+          = link_to @product.practice, class: "thread-prev-next__item-link is-index" do
+            | プラクティスに戻る
+
+      = link_to @product.user, itempro: "url", class: "thread__author-link" do
+        = gravatar_tag @product.user, secure: true, size: 120, html: { class: "thread__author-icon" }
+
     = render "comments/comments", comments: @product.comments.order(:created_at), form_visibility: true
     = render "footprints/footprints", footprints: @footprints
