--- a/app/views/comments/_comment.html.slim
+++ b/app/views/comments/_comment.html.slim
@@ -10,7 +10,7 @@
           = comment.user.login_name
       time.thread-comment__created-at(datetime="#{commentable.created_at.to_datetime}" pubdate="pubdate")
         = l comment.updated_at
-      - if current_page?(user_comments_path(current_user.id))
+      - if controller_path == "users/comments" && action_name == "index"
         a.thread-comment__thread href="/reports/#{(comment.commentable_id)}"
           = Report.find(comment.commentable_id).title
     .thread-comments__description.js-markdown-view.js-target-blank.is-long-text-style
