--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -11,7 +11,7 @@ header.page-header
 
 .page-body
   .container
-    .user.a-card
+    .a-card.is-user
       .user-data__inner
         .user-data__main
           = render "users/profile", user: @user
