--- a/app/views/users/_grass.html.slim
+++ b/app/views/users/_grass.html.slim
@@ -1,5 +1,6 @@
-.user-grass.user.a-card
-  .user-grass__inner
-    .user-grass__header 学習時間
-    .user-grass__main
-      canvas#grass(width="650px" height="150px" data-user-id="#{user.id}")
+.a-card.is-user
+  .card-header
+    h2.card-header__title
+      | 学習時間
+  .user-grass__main
+    canvas#grass(width="650px" data-user-id="#{user.id}")
