草の配置の調整

--- a/app/assets/stylesheets/blocks/thread/_thread-list-item.sass
+++ b/app/assets/stylesheets/blocks/thread/_thread-list-item.sass
@@ -78,7 +78,7 @@
 
 .thread-list-item__sub-title
   +text-block(.75rem 1.4, $muted-text 400)
-  +margin(vertical, .25rem .125rem)
+  margin-bottom: .25rem
 
 .thread-list-item__actions
   margin-left: .5rem
