--- a/app/assets/stylesheets/blocks/user/_user_metas.sass
+++ b/app/assets/stylesheets/blocks/user/_user_metas.sass
@@ -1,12 +1,10 @@
-.user-metas
-  +media-breakpoint-down(sm)
-    margin-bottom: .75rem
-
 .user-metas__items
   border: solid 1px $background-color-shade
 
 .user-metas__item
   +text-block(.75rem 1.4, flex)
+  +media-breakpoint-down(sm)
+    display: block
   &:nth-child(odd)
     background-color: #fafafa
   &:not(:last-child)
@@ -17,6 +15,10 @@
   border-right: dashed 1px $background-color-shade
   flex: 0 0 8rem
   padding: .375rem .5rem
+  +media-breakpoint-down(sm)
+    text-align: left
+    border-right: none
+    border-bottom: dashed 1px $background-color-shade
 
 .user-metas__item-value
   flex: 100
