--- a/app/assets/stylesheets/settings/variables/_sanitize.sass
+++ b/app/assets/stylesheets/settings/variables/_sanitize.sass
@@ -3,6 +3,8 @@ $button-styles: border, simple
 $small-column-horizontal-padding: 2rem
 $xs-small-column-horizontal-padding: 1rem
 
+$grid-breakpoints: (xs: 0, sm: 34em, md: 48em, lg: 62em, xl: 75em, xxl: 120em)
+
 $grid-gutter-width: 1rem
 
 $root-background-color: $background-color
