--- a/app/assets/stylesheets/shared/_base.sass
+++ b/app/assets/stylesheets/shared/_base.sass
@@ -35,20 +35,20 @@ body
   max-width: 100%
   padding-left: 7rem
   padding-right: 15.5rem
-  +media-breakpoint-down(md)
+  +media-breakpoint-down(lg)
     +padding(horizontal, 6rem 1rem)
   +media-breakpoint-down(sm)
     +padding(horizontal, 1rem)
   html body &.has-no-right-padding
     padding-right: 14rem
-    +media-breakpoint-down(md)
+    +media-breakpoint-down(lg)
       +padding(horizontal, 6rem 0)
     +media-breakpoint-down(sm)
       +padding(horizontal, 1rem)
   html body.is-edit-page &.has-no-right-padding,
   html body.is-admin &.has-no-right-padding,
     padding-right: 0
-    +media-breakpoint-down(md)
+    +media-breakpoint-down(lg)
       +padding(horizontal, 6rem 0)
     +media-breakpoint-down(sm)
       +padding(horizontal, 1rem)
