--- a/app/assets/stylesheets/blocks/header/_header.sass
+++ b/app/assets/stylesheets/blocks/header/_header.sass
@@ -1,4 +1,5 @@
 $header-height: 3.125rem
+
 .header
   background-color: $base
   +position(relative, 1)
@@ -10,6 +11,11 @@ $header-height: 3.125rem
   justify-content: space-between
   align-items: center
   height: $header-height
+
+.header__title
+  color: $default-text
+  display: flex
+  align-items: center
 
 .header__title-image
   height: 2rem
@@ -85,9 +91,6 @@ $header-height: 3.125rem
   +border-radius(left, 0)
   font-size: 1rem
 
-.header__title
-  color: $default-text
-
 .header-show-mobile-nav
   display: none
   cursor: pointer
@@ -116,7 +119,6 @@ $header-height: 3.125rem
   +media-breakpoint-down(sm)
     +size(1.125rem .75rem)
     +position(absolute, right .125rem, top .375rem)
-
 
 .header-show-mobile-nav-items
   display: none
