--- a/app/assets/stylesheets/blocks/page/_page-tabs.sass
+++ b/app/assets/stylesheets/blocks/page/_page-tabs.sass
@@ -3,6 +3,7 @@
   margin-bottom: 1.5rem
   margin-top: -1.5rem
   padding-top: .5rem
+  border-top: solid 1px #b9b9b9
   border-bottom: solid 1px #b9b9b9
   +media-breakpoint-down(sm)
     margin-top: -1rem
