--- a/app/assets/stylesheets/blocks/report/_recent-reports.sass
+++ b/app/assets/stylesheets/blocks/report/_recent-reports.sass
@@ -3,7 +3,7 @@
   +size(14rem 100%)
   background-color: $side
   +overflow(hidden auto)
-  +media-breakpoint-down(md)
+  +media-breakpoint-down(lg)
     display: none
 
 .recent-reports-item__link
