--- a/app/views/courses/_course.html.slim
+++ b/app/views/courses/_course.html.slim
@@ -1,4 +1,4 @@
-.col-xl-3.col-lg-4.col-md-6.col-xs-12
+.col-xxl-3.col-xl-4.col-lg-4.col-md-6.col-xs-12
   .courses-item(id="course_#{course.id}")
     .courses-item__inner.a-card
       header.courses-item__header
