--- a/app/views/users/_grass.html.slim
+++ b/app/views/users/_grass.html.slim
@@ -1,6 +1,6 @@
-.a-card.is-user
+.a-card
   .card-header
     h2.card-header__title
       | 学習時間
-  .user-grass__main
-    canvas#grass(width="650px" data-user-id="#{user.id}")
+  .user-grass
+    canvas#grass.a-grass(width="650px" height="130px" data-user-id="#{user.id}")
