--- a/app/views/users/_user.html.slim
+++ b/app/views/users/_user.html.slim
@@ -1,4 +1,4 @@
-.col-xl-3.col-lg-4.col-md-6.col-xs-12
+.col-xxl-3.col-xl-4.col-lg-4.col-md-6.col-xs-12
   .users-item(class="#{user.active? ? "active" : "inactive"}")
     .users-item__inner.a-card
       header.users-item__header
