--- a/app/views/users/comments/index.html.slim
+++ b/app/views/users/comments/index.html.slim
@@ -3,9 +3,10 @@ header.page-header
   .container
     .page-header__container
       h2.page-header__title = title
-      ul.page-header-actions__items
-        li.page-header-actions__item
-          = link_to "ユーザー一覧", users_path, class: "is-button-simple-md-secondary"
+      .page-header-actions
+        ul.page-header-actions__items
+          li.page-header-actions__item
+            = link_to "ユーザー一覧", users_path, class: "is-button-simple-md-secondary"
 
 = render "page_tabs", resource: @user
 
