--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -3,9 +3,10 @@ header.page-header
   .container
     .page-header__container
       h2.page-header__title = title
-      ul.page-header-actions__items
-        li.page-header-actions__item
-          = link_to "ユーザー一覧", users_path, class: "is-button-simple-md-secondary"
+      .page-header-actions
+        ul.page-header-actions__items
+          li.page-header-actions__item
+            = link_to "ユーザー一覧", users_path, class: "is-button-simple-md-secondary"
 
 = render "page_tabs", resource: @user
 
@@ -17,6 +18,8 @@ header.page-header
           = render "users/profile", user: @user
         .user-data__sub
           = render "users/metas", user: @user
+        .user-data__grass
+          canvas.a-grass#grass(width="650px" height="130px" data-user-id="#{@user.id}")
         .user-data__description
           = simple_format @user.description
 
@@ -30,5 +33,3 @@ header.page-header
               - if current_user == @user
                 li.card-footer-actions__item
                   = link_to "登録情報を変更する", edit_user_path, class: "card-footer-actions__action is-button-simple-md-warning is-block"
-
-    = render "users/grass", user: @user
