--- a/app/assets/stylesheets/welcome/_main-visual.sass
+++ b/app/assets/stylesheets/welcome/_main-visual.sass
@@ -5,7 +5,7 @@
   background-size: 1.75rem
   background-repeat: repeat
   background-position: center center
-  +media-breakpoint-down(xl)
+  +media-breakpoint-down(xxl)
     height: 28rem
   +media-breakpoint-down(md)
     height: 22rem
