透過pngのアイコンのために背景を白にした

--- a/app/assets/stylesheets/blocks/shared/_faces.sass
+++ b/app/assets/stylesheets/blocks/shared/_faces.sass
@@ -30,6 +30,7 @@
   img
     +size(4.5rem)
     object-fit: cover
+    background-color: $base
 
 .faces-item__name
   +text-block(.625rem 1.45, 700 center nowrap $default-text)
