--- a/app/assets/stylesheets/blocks/page/_page-header-actions.sass
+++ b/app/assets/stylesheets/blocks/page/_page-header-actions.sass
@@ -16,6 +16,8 @@
   +media-breakpoint-down(sm)
     flex: 1
     max-width: 50%
+    &:first-child:last-child
+      max-width: 100%
   a
     display: flex
     width: 100%
