--- a/app/assets/stylesheets/shared/_base.sass
+++ b/app/assets/stylesheets/shared/_base.sass
@@ -70,6 +70,10 @@ body
     max-width: 75rem
     +padding(horizontal, 1rem)
 
+.columns
+  max-width: 75rem
+  +margin(horizontal, auto)
+
 [class*=is-button-simple-]
   &[class*=-secondary]
     border: solid 1px #c1c5b9
