--- a/app/assets/stylesheets/blocks/user/_user-data.sass
+++ b/app/assets/stylesheets/blocks/user/_user-data.sass
@@ -23,31 +23,11 @@
 .user-data__inner
   padding: 1.5rem
   +position(relative)
-  display: flex
-  flex-wrap: wrap
+  +media-breakpoint-down(sm)
+    padding: .75rem
 
 .user-data__main
-  flex: 0 0 50%
-  padding-right: .5rem
-  +media-breakpoint-down(sm)
-    flex: 0 0 100%
-    padding-right: 0
-    margin-bottom: .75rem
-
-.user-data__sub
-  flex: 0 0 50%
-  padding-left: .5rem
-  +media-breakpoint-down(sm)
-    flex: 0 0 100%
-    padding-left: 0
-
-.user-data__grass
-  flex: 0 0 100%
-  overflow-y: auto
-  margin-top: 1rem
-  text-align: center
-  +media-breakpoint-down(sm)
-    margin-top: .75rem
+  margin-bottom: .75rem
 
 .user-data__description
   flex: 0 0 100%
