--- a/app/views/home/_announcements.html.slim
+++ b/app/views/home/_announcements.html.slim
@@ -1,7 +1,8 @@
 .thread-list-item
   .thread-list-item__inner
     .thread-list-item__author
-      = gravatar_tag announcement.user, secure: true, size: 44, html: { class: "thread-list-item__author-icon" }
+      = link_to announcement.user do
+        = gravatar_tag announcement.user, secure: true, size: 44, html: { class: "thread-list-item__author-icon" }
     header.thread-list-item__header
       h2.thread-list-item__title(itemprop="name")
         = link_to announcement, itempro: "url", class: "thread-list-item__title-link" do
