--- a/app/views/users/_user.html.slim
+++ b/app/views/users/_user.html.slim
@@ -11,11 +11,11 @@
         = render "users/sns", user: user
       .users-item__body
         .users-item__description
-          p = truncate(user.description, length: 100)
+          p = truncate(user.description, length: 200)
       - if current_user.admin?
         footer.card-footer
           .card-footer-actions
             ul.card-footer-actions__items
-              .card-footer-actions__item
-                = link_to edit_admin_user_path(user), class: "card-footer-actions__action is-button-simple-xs-secondary" do
+              li.card-footer-actions__item
+                = link_to edit_admin_user_path(user), class: "card-footer-actions__action is-button-simple-md-secondary is-block" do
                   | 管理者として変更
