--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -12,27 +12,31 @@ header.page-header
 
 .page-body
   .container
-    .a-card.is-user
-      .user-data__inner
-        .user-data__main
-          = render "users/profile", user: @user
-        .user-data__sub
-          = render "users/metas", user: @user
-        .user-data__grass
-          canvas.a-grass#grass(width="650px" height="130px" data-user-id="#{@user.id}")
-        - if @user.github_account
-          .user-data__github-grass
-            = image_tag user_github_grass_url(@user)
-        .user-data__description
-          = simple_format @user.description
+    .columns
+      .row
+        .col-xs-12.col-lg-5.col-xxl-6
+          .a-card.is-user
+            .user-data__inner
+              header.user-data__header
+                .user-data__main
+                  = render "users/profile", user: @user
+                .user-data__sub
+                  = render "users/metas", user: @user
+              .user-data__description
+                = simple_format @user.description
 
-      - if current_user == @user || current_user.admin?
-        footer.card-footer
-          .card-footer-actions
-            ul.card-footer-actions__items
-              - if current_user.admin?
-                li.card-footer-actions__item
-                  = link_to "管理者として情報変更", edit_admin_user_path, class: "card-footer-actions__action is-button-simple-md-secondary is-block"
-              - if current_user == @user
-                li.card-footer-actions__item
-                  = link_to "登録情報を変更する", edit_user_path, class: "card-footer-actions__action is-button-simple-md-warning is-block"
+            - if current_user == @user || current_user.admin?
+              footer.card-footer
+                .card-footer-actions
+                  ul.card-footer-actions__items
+                    - if current_user.admin?
+                      li.card-footer-actions__item
+                        = link_to "管理者として情報変更", edit_admin_user_path, class: "card-footer-actions__action is-button-simple-md-secondary is-block"
+                    - if current_user == @user
+                      li.card-footer-actions__item
+                        = link_to "登録情報を変更する", edit_user_path, class: "card-footer-actions__action is-button-simple-md-warning is-block"
+        .col-xs-12.col-lg-7.col-xxl-6
+          = render "users/grass", user: @user
+          - if @user.github_account
+            .a-card
+              = render "users/github_grass", user: @user
