全体のデザイン調整

--- a/app/assets/stylesheets/blocks/page/_page-header.sass
+++ b/app/assets/stylesheets/blocks/page/_page-header.sass
@@ -19,7 +19,7 @@
     +padding(vertical, .75rem)
 
 .page-header__title
-  +text-block(1.25rem 1, $side)
+  +text-block(1.25rem 1, $side 700)
   img
     +size(2.5rem auto)
   +media-breakpoint-down(sm)
