--- a/app/assets/stylesheets/blocks/shared/_tab-nav.sass
+++ b/app/assets/stylesheets/blocks/shared/_tab-nav.sass
@@ -3,6 +3,8 @@
   border-bottom: solid 1px $background-color-shade
   &.is-delete-margin-top
     margin-top: -1.5rem
+    +media-breakpoint-down(sm)
+      margin-top: -1rem
   &.is-in-tab
     margin-top: -1rem
 
