--- a/app/assets/stylesheets/blocks/practice/_practice-content.sass
+++ b/app/assets/stylesheets/blocks/practice/_practice-content.sass
@@ -5,6 +5,16 @@
   &:not(:first-child)
     margin-top: 2rem
 
+.practice-contents__header
+  border-bottom: solid 1px $background-color-shade
+  margin-bottom: 1rem
+  padding-bottom: .5rem
+
+.practice-contents__title
+  +text-block(1.375rem 1.4, 700 $side)
+  +media-breakpoint-down(sm)
+    font-size: 1rem
+
 .practice-content
   position: relative
   display: block
