--- a/app/views/practices/reports/index.html.slim
+++ b/app/views/practices/reports/index.html.slim
@@ -4,10 +4,12 @@ header.page-header
   .container
     .page-header__container
       h2.page-header__title = title
-      .page-header__action
-        = link_to practices_path, class: "is-button-simple-md-secondary" do
-          i.fas.fa-angle-left
-          | プラクティス
+      .page-header-actions
+        ul.page-header-actions__items
+          li.page-header-actions__item
+            = link_to practices_path, class: "is-button-simple-md-secondary" do
+              i.fas.fa-angle-left
+              | プラクティス
 
 = render "page_tabs", resource: @practice
 
@@ -17,4 +19,7 @@ header.page-header
     - if @reports.present?
       .thread-list.a-card
         = render partial: "reports/report", collection: @reports, as: :report
-    = paginate @reports, position: "bottom"
+      = paginate @reports, position: "bottom"
+    - else
+      .thread-list.is-empty
+        | 日報はまだありません。
