--- a/app/views/practices/show.html.slim
+++ b/app/views/practices/show.html.slim
@@ -3,7 +3,7 @@
 header.page-header
   .container
     .page-header__container
-      h2.page-header__title
+      .page-header__title
         = @practice.title
       .page-header-actions
         ul.page-header-actions__items
@@ -21,6 +21,9 @@ header.page-header
 
 .container
   .practice-contents
+    header.practice-contents__header
+      h1.practice-contents__title
+        = @practice.title
     section.practice-content.a-card
       header.practice-content__header.card-header
         h2.practice-content__title
