--- a/app/views/reports/show.html.slim
+++ b/app/views/reports/show.html.slim
@@ -3,7 +3,8 @@
 header.page-header
   .container
     .page-header__container
-      h1.page-header__title = title
+      .page-header__title
+        | #{l @report.reported_on} の日報
       .page-header-actions
         ul.page-header-actions__items
           li.page-header-actions__item
