お問い合わせフォームのデザイン

--- a/app/assets/stylesheets/atoms/_card.sass
+++ b/app/assets/stylesheets/atoms/_card.sass
@@ -10,3 +10,6 @@
     margin-top: 1.5rem
     +media-breakpoint-down(lg)
       margin-top: 1rem
+  &.is-borderd
+    border: solid 4px $welcome-default-text
+    box-shadow: none
