--- a/app/assets/stylesheets/atoms/_form.sass
+++ b/app/assets/stylesheets/atoms/_form.sass
@@ -50,6 +50,8 @@
 textarea.a-sm-text-input
   min-height: 6rem
   overflow: hidden
+  &.is-md
+    min-height: 16rem
 
 .a-sm-label
   +text-block(.8125rem 1.45 .5rem, block 600)
