--- a/app/assets/stylesheets/shared/_base.sass
+++ b/app/assets/stylesheets/shared/_base.sass
@@ -23,6 +23,10 @@ body
       overflow: hidden
   &.is-error-page
     padding-top: 4rem
+    overflow-y: auto
+  &.is-auth-page
+    padding-top: 2rem
+  &.is-piyo-background
     background-color: $main-color
     background-image: image_url('error-background-main-color.svg')
     background-repeat: repeat
