--- a/app/views/static_pages/retire.html.slim
+++ b/app/views/static_pages/retire.html.slim
@@ -1,7 +1,7 @@
-- content_for(:page_classes, "no-header no-footer no-recent-reports no-global-nav is-error-page")
+- content_for(:page_classes, "no-header no-footer no-recent-reports no-global-nav is-error-page is-piyo-background")
 
 .container
-  .error-message
+  .error-message.a-card.is-borderd
     header.retire-message__header
       h1.retire-message__title
         | ログインができません
