--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -1,5 +1,5 @@
 - title @user.adviser? ? "アドバイザー登録" : "フィヨルドブートキャンプ参加登録"
-- content_for :page_classes, "no-header no-footer no-recent-reports no-global-nav is-auth-page"
+- content_for :page_classes, "no-header no-footer no-recent-reports no-global-nav is-auth-page is-piyo-background"
 
 .auth-form.is-sign-up.a-card
   header.auth-form__header
