--- a/app/assets/stylesheets/blocks/auth-form/_auth-form.sass
+++ b/app/assets/stylesheets/blocks/auth-form/_auth-form.sass
@@ -2,31 +2,23 @@
   max-width: 24rem
   +margin(horizontal, auto)
   display: block
-  margin-top: 4rem
+  +margin(vertical, 4rem 2rem)
   +media-breakpoint-down(sm)
     margin-top: 2rem
     max-width: 100%
     +padding(horizontal, 2rem)
 
 .auth-form
-  +margin(vertical, 2rem 4rem)
+  margin-bottom: 4rem
   max-width: 22rem
   +margin(horizontal, auto)
   +media-breakpoint-down(sm)
-    margin-top: 2rem
     +margin(horizontal, 1rem)
     max-width: 100%
   &.is-sign-up
     max-width: 34rem
-  &.is-home
-    max-width: 30rem
-    margin-top: .5rem
-    +media-breakpoint-down(sm)
-      +margin(horizontal, 0)
-      .auth-form__body
-        +padding(horizontal, 0)
-  &.is-contact
-    max-width: 35rem
+  &.is-in-app
+    margin-top: 2rem
 
 .auth-form__header
   border-bottom: solid 1px $background-color
