--- a/app/views/admin/users/edit.html.slim
+++ b/app/views/admin/users/edit.html.slim
@@ -1,9 +1,10 @@
-- title "ユーザー編集"
+- title "ユーザー登録情報変更"
 - content_for(:page_classes, "no-header no-footer no-recent-reports")
 
-.auth-form.is-sign-up.a-card
+.auth-form.is-sign-up.a-card.is-in-app
   header.auth-form__header
-    h1.auth-form__title = title
+    h1.auth-form__title
+      = title
   .auth-form__body
     = render "users/form", from: :edit, url: [:admin, @user], user: @user
   footer.auth-form__footer
