--- a/app/views/inquiries/_form.html.slim
+++ b/app/views/inquiries/_form.html.slim
@@ -1,21 +1,20 @@
 = form_with model: inquiry, url: inquiry_path, method: :post, local: true do |f|
   = render "errors", object: inquiry
-  .form-item
-    .row
-      .col-md-6.col-xs-12
-        = f.label :name, class: "a-label"
-        = f.text_field :name, class: "a-text-input"
-  .form-item
-    .row
-      .col-md-6.col-xs-12
-        = f.label :email, class: "a-label"
-        = f.text_field :email, class: "a-text-input"
-  .form-item
-    .row
-      .col-md-6.col-xs-12
-        = f.label :body, class: "a-label"
-        = f.text_area :body, size: "20x20", class: "a-textarea"
-  .form-actions
-    ul.form-actions__items
-      li.form-actions__item
-        = f.submit "送信する", class: "is-button-simple-md-primary"
+  .auth-form-items
+    .auth-form-item
+      = f.label :name, class: "a-sm-label is-required"
+      = f.text_field :name, class: "a-sm-text-input"
+    .auth-form-item
+      = f.label :email, class: "a-sm-label is-required"
+      = f.text_field :email, class: "a-sm-text-input"
+    .auth-form-item
+      = f.label :body, class: "a-sm-label is-required" do
+        | お問い合わせ内容
+      = f.text_area :body, class: "a-sm-text-input is-md"
+
+  .auth-form-action.is-sign-up-action
+    ul.auth-form-action__items
+      li.auth-form-action__item
+        = link_to "キャンセル", :back, class: "is-button-simple-xs-secondary"
+      li.auth-form-action__item
+        = f.submit "送信する", class: "is-button-simple-md-warning"
