--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -1,4 +1,4 @@
-= form_for user do |f|
+= form_with model: user, url: url, local: true, html: { name: "user" } do |f|
   = f.hidden_field :adviser
   = render "errors", object: user
   .auth-form-items
@@ -164,6 +164,20 @@
       = f.password_field :password_confirmation, class: "a-sm-text-input", autocomplete: :off
       .auth-form-item__help
         p パスワードをもう一度入力
+    - if admin_login?
+      .auth-form-item
+        = f.label :graduated_on, class: "a-sm-label"
+        = f.text_field :graduated_on, class: "datepicker a-text-input"
+      .auth-form-item
+        = f.label :adviser, class: "a-sm-label"
+        ul.auth-form-item__checkboxes
+          li.auth-form-checkbox
+            label.auth-form-checkbox__label
+              = f.check_box :adviser, class: "auth-form-checkbox__input"
+              = User.human_attribute_name :adviser
+      .auth-form-item
+        = f.label :retired_on, class: "a-sm-label"
+        = f.text_field :retired_on, class: "datepicker a-text-input"
     - if from == :new
       .auth-form-item
         label.a-sm-label
@@ -180,4 +194,4 @@
       li.auth-form-action__item
         = f.submit user_submit_label(user, from), class: "is-button-simple-md-warning js-sign-up-action"
 
-  = render "nda_modal", f: f
+  = render "users/nda_modal", f: f
