--- a/app/views/admin/users/edit.html.slim
+++ b/app/views/admin/users/edit.html.slim
@@ -5,13 +5,11 @@
   header.auth-form__header
     h1.auth-form__title = title
   .auth-form__body
-    = render "form", user: @user
+    = render "users/form", from: :edit, url: [:admin, @user], user: @user
   footer.auth-form__footer
     nav.auth-form-nav
       ul.auth-form-nav__items
         li.auth-form-nav__item
           = link_to "トップページ", root_path, class: "auth-form-nav__item-link"
-        li.auth-form-nav__item
-          = link_to "サインイン", login_path, class: "auth-form-nav__item-link"
         li.auth-form-nav__item
           = link_to "秘密保持契約書", login_path, class: "auth-form-nav__item-link"
