--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -29,12 +29,9 @@ header.page-header
               footer.card-footer
                 .card-footer-actions
                   ul.card-footer-actions__items
-                    - if current_user.admin?
+                    - if admin_login?
                       li.card-footer-actions__item
                         = link_to "管理者として情報変更", edit_admin_user_path, class: "card-footer-actions__action is-button-simple-md-secondary is-block"
-                    - if current_user == @user
-                      li.card-footer-actions__item
-                        = link_to "登録情報を変更する", edit_user_path, class: "card-footer-actions__action is-button-simple-md-warning is-block"
         .col-xs-12.col-lg-7.col-xxl-6
           = render "users/grass", user: @user
           - if @user.github_account
