日報未チェック数にデザイン

--- a/app/assets/stylesheets/blocks/header/_header.sass
+++ b/app/assets/stylesheets/blocks/header/_header.sass
@@ -67,13 +67,7 @@ $header-height: 3.125rem
   transform: scale(.9)
 
 .header-links__link-count
-  +size(1rem)
-  border-radius: 50%
-  background-color: $danger
-  +position(absolute, right .25rem, top .25rem)
-  +text-block(.625rem, $reversal-text flex)
-  align-items: center
-  justify-content: center
+  +position(right .25rem, top .25rem)
 
 .header-search
   display: flex
