--- a/app/assets/stylesheets/blocks/page/_page-tabs.sass
+++ b/app/assets/stylesheets/blocks/page/_page-tabs.sass
@@ -40,6 +40,7 @@
   +padding(horizontal, 1em)
   +border-radius(top, .25rem)
   border: solid 1px #b9b9b9
+  +position(relative)
   +media-breakpoint-down(sm)
     font-size: .75rem
   &:hover
@@ -49,3 +50,6 @@
     border-color: #b9b9b9
     border-bottom-color: $background-color
     color: $default-text
+
+.page-tabs__item-count
+  +position(right .0625rem, top .0625rem)
