赤丸のサイズを修正

--- a/app/assets/stylesheets/atoms/_count.sass
+++ b/app/assets/stylesheets/atoms/_count.sass
@@ -1,6 +1,6 @@
 .a-notification-count
-  +size(1rem)
-  border-radius: 50%
+  +size(1.25rem .875rem)
+  border-radius: 1rem
   background-color: $danger
   +position(absolute)
   +text-block(.625rem, $reversal-text flex)
