Q&A一覧の未解決のタブに未解決の質問数を出した

--- a/app/views/questions/_tabs.html.slim
+++ b/app/views/questions/_tabs.html.slim
@@ -2,6 +2,7 @@
   .container
     ul.page-tabs__items
       li.page-tabs__item
+        = Question.not_solved.count
         = link_to "未解決", polymorphic_path(:questions, practice_id: params[:practice_id]), class: "page-tabs__item-link #{params[:solved].present? ? "" : "is-active"}"
       li.page-tabs__item
         = link_to "解決済み", polymorphic_path(:questions, solved: "true", practice_id: params[:practice_id]), class: "page-tabs__item-link #{params[:solved].present? ? "is-active" : ""}"
